<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_bien_lai"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.vantrantrucphuong.kiemtragiuaki.Activity.ChiTietBienLaiActivity">

    <LinearLayout
        android:weightSum="5"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16dp"
            android:gravity="center|left"
            android:layout_weight="1.75"
            android:text="@string/txtSoBienLai"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <EditText
            android:textSize="16dp"
            android:layout_weight="3.25"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/edtSoBL"/>
    </LinearLayout>

    <LinearLayout
        android:weightSum="5"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16dp"
            android:gravity="center|left"
            android:layout_weight="1.75"
            android:text="@string/txtNgayHP"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <EditText
            android:id="@+id/edtNgayHP"
            android:textSize="16dp"
            android:layout_weight="3.25"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:weightSum="5"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16dp"
            android:gravity="center|left"
            android:layout_weight="1.75"
            android:text="@string/txtMaMonHoc"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <EditText
            android:id="@+id/edtMaMonHoc"
            android:textSize="16dp"
            android:layout_weight="3.25"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:weightSum="5"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="16dp"
            android:gravity="center|left"
            android:layout_weight="1.80"
            android:text="@string/txtTenMonHoc"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/textView"/>

        <EditText
            android:textSize="16dp"
            android:layout_weight="3.20"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/edtTenMonHoc"/>
    </LinearLayout>
    <LinearLayout
        android:weightSum="5"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16dp"
            android:gravity="center|left"
            android:layout_weight="1.75"
            android:text="@string/txtSoTinChi"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <EditText
            android:id="@+id/edtSoTinChi"
            android:textSize="16dp"
            android:layout_weight="3.25"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:weightSum="5"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16dp"
            android:gravity="center|left"
            android:layout_weight="1.75"
            android:text="@string/txtSoTien"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <EditText
            android:id="@+id/edtSoTien"
            android:textSize="16dp"
            android:layout_weight="3.25"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_TroVe"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_button"
        android:text="Trở về"
        android:layout_width="120dp"
        android:layout_height="wrap_content"/>
</LinearLayout>
